.provarCaches/00D410000011HE0EAM/objects/rstkf__apwhtretvend__c.object
<CustomObject>
    <description>apwhtretvend__c</description>
    <fields>
        <fullName>rstkf__apwhtretvend_apwht__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>apwhtretvend_apwht__c</description>
        <inlineHelpText>The Withholding Tax Class used for transactions on the Payment associated with this Return</inlineHelpText>
        <label>Withholding Tax Class</label>
        <referenceTo>rstkf__apwht__c</referenceTo>
        <relationshipLabel>WHT Return Vendor Summary</relationshipLabel>
        <relationshipName>apwhtretvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_apwhtreturn__c</fullName>
        <label>WHT Return Number</label>
        <referenceTo>rstkf__apwhtreturn__c</referenceTo>
        <relationshipLabel>WHT Return Vendor Summary</relationshipLabel>
        <relationshipName>apwhtretvends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_pct__c</fullName>
        <formula>rstkf__apwhtretvend_apwht__r.rstkf__apwht_pct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WHT Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_povendcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Company</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>WHT Return Vendor Summary</relationshipLabel>
        <relationshipName>apwhtretvends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_totamtpaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_txntotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vendor Return Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendcity__c</fullName>
        <label>Vendor City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendcountry__c</fullName>
        <label>Vendor Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendname__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendstate__c</fullName>
        <label>Vendor State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendstreet__c</fullName>
        <label>Vendor Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apwhtretvend_vendzip__c</fullName>
        <label>Vendor Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apwhtretvend_apwhtreturn__r.rstkf__externalid__c +  rstkf__apwhtretvend_povendcmpno__r.rstkf__externalid__c + rstkf__apwhtretvend_apwht__r.rstkf__formula_extid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apwhtretvend_apwhtreturn__r.Name + &apos;(&apos; + rstkf__apwhtretvend_povendcmpno__r.rstkf__povendcmpno_vendno__r.rstk__povend_vendno__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WHT Return Vendor Summary</label>
    <nameField>
        <label>WHT Return Vendor Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WHT Return Vendor Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>